--- a/www/cart-1.html
+++ b/www/cart-1.html
@@ -86,13 +86,13 @@
 			<div class="header-basket-col">
 				<div class="basket">
 					<span class="ico"><span class="badge">115</span></span>
-					<span class="total-price underlined">20 547,87 руб</span>
+					<span class="total-price underlined"><span>20547,87</span> руб</span>
 				</div>
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
 						<div class="item">Ваша корзина еще пуста.</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -105,7 +105,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -119,7 +119,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -132,7 +132,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -145,7 +145,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -163,7 +163,7 @@
 						<a href="catalog-text.html">Смотреть все товары</a>
 						<div class="summ">
 							<span>Итого:</span>
-							<span>3593.37</span>
+							<span>0</span>
 							<span>руб</span>
 						</div>
 					</div>
@@ -291,8 +291,8 @@
 				<tbody>
 					<tr>
 						<td>1</td>
-						<td><img src="images/product-image.jpg" alt="Изображение товара"></td>
-						<td>Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</td>
+						<td><a href="#"><img src="images/product-image.jpg" alt="Изображение товара"></a></td>
+						<td><a href="#">Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</a></td>
 						<td>
 							<ul>
 								<li>40 мл.</li>
@@ -334,8 +334,8 @@
 					</tr>
 					<tr>
 						<td>2</td>
-						<td><img src="images/product-image.jpg" alt="Изображение товара"></td>
-						<td>Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</td>
+						<td><a href="#"><img src="images/product-image.jpg" alt="Изображение товара"></a></td>
+						<td><a href="#">Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</a></td>
 						<td>
 							<ul>
 								<li>40 мл.</li>
@@ -377,8 +377,8 @@
 					</tr>
 					<tr>
 						<td>3</td>
-						<td><img src="images/product-image.jpg" alt="Изображение товара"></td>
-						<td>Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</td>
+						<td><a href="#"><img src="images/product-image.jpg" alt="Изображение товара"></a></td>
+						<td><a href="#">Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</a></td>
 						<td>
 							<ul>
 								<li>40 мл.</li>
