--- a/www/product.html
+++ b/www/product.html
@@ -85,73 +85,20 @@
 			</div>
 			<div class="header-basket-col">
 				<div class="basket">
-					<span class="ico"><span class="badge">115</span></span>
-					<span class="total-price underlined">20 547,87 руб</span>
+					<span class="ico"><span class="badge">1</span></span>
+					<span class="total-price underlined"><span>0</span> руб</span>
 				</div>
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
 						<div class="item">Ваша корзина еще пуста.</div>
-						<div class="item">
-							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
-							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
-							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
-							</div>
-							<div class="remove">
-								<a href="#"></a>
-							</div>
-						</div>
-						<div class="item">
+						<div class="item" data-item-summ="200">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2<span>шт</span></div>
 							<div class="price">
 								<div>
-									<div class="special-price">3593.37 <span>руб</span></div><!-- Special price -->
-									<div class="old-price">3593.37 <span>руб</span></div><!-- Old price -->
-								</div>
-							</div>
-							<div class="remove">
-								<a href="#"></a>
-							</div>
-						</div>
-						<div class="item">
-							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
-							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
-							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
-							</div>
-							<div class="remove">
-								<a href="#"></a>
-							</div>
-						</div>
-						<div class="item">
-							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
-							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
-							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
-							</div>
-							<div class="remove">
-								<a href="#"></a>
-							</div>
-						</div>
-						<div class="item">
-							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
-							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
-							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
+									<div>200<span> руб</span></div><!-- Normal price -->
 								</div>
 							</div>
 							<div class="remove">
@@ -163,7 +110,7 @@
 						<a href="catalog-text.html">Смотреть все товары</a>
 						<div class="summ">
 							<span>Итого:</span>
-							<span>3593.37</span>
+							<span>0</span>
 							<span>руб</span>
 						</div>
 					</div>
@@ -249,7 +196,7 @@
 			<div class="car">
 				<div>
 					<div class="range"></div>
-					<div class="ico" style="width:60%;"></div>
+					<div class="ico" style="width:0%;"></div>
 				</div>
 				<a href="#">Хочу бесплатно</a>
 			</div>
@@ -407,7 +354,8 @@
 				</ul>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 pager"><span class="next"><a href="#">Показать еще</a></span></div>
+				<div class="col-xs-12 pager"><span class="next"><a href="javascript:">Показать еще</a></span></div>
+				<div class="loader"></div>
 			</div>
 		</div>
 	</div>
