--- a/www/index.html
+++ b/www/index.html
@@ -86,13 +86,13 @@
 			<div class="header-basket-col">
 				<div class="basket">
 					<span class="ico"><span class="badge">115</span></span>
-					<span class="total-price underlined">20 547,87 руб</span>
+					<span class="total-price underlined"><span>20547,87</span> руб</span>
 				</div>
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
 						<div class="item">Ваша корзина еще пуста.</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -105,7 +105,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -119,7 +119,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -132,7 +132,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -145,7 +145,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -163,7 +163,7 @@
 						<a href="catalog-text.html">Смотреть все товары</a>
 						<div class="summ">
 							<span>Итого:</span>
-							<span>3593.37</span>
+							<span>0</span>
 							<span>руб</span>
 						</div>
 					</div>
@@ -247,6 +247,12 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<div id="frontpage-carousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+					<!-- Indicators for mobile version -->
+					<ol class="carousel-indicators">
+						<li data-target="#frontpage-carousel" data-slide-to="0" class="active"></li>
+						<li data-target="#frontpage-carousel" data-slide-to="1"></li>
+						<li data-target="#frontpage-carousel" data-slide-to="2"></li>
+					</ol>   
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner">
 						<div class="item active">
@@ -275,22 +281,24 @@
 		</div>
 	</div>
 </div>
-<div class="container frontpage-categories">
-	<div class="row">
-		<div class="col-xs-4"><a href="#" style="background-image: url('images/category1.jpg');"><span>Продукты</span></a></div>
-		<div class="col-xs-4"><a href="#" style="background-image: url('images/category2.jpg');"><span>Детство</span></a></div>
-		<div class="col-xs-4"><a href="#" style="background-image: url('images/category1.jpg');"><span>Косметика</span></a></div>
-		<div class="col-xs-4"><a href="#" style="background-image: url('images/category4.jpg');"><span>Сантехника</span></a></div>
-		<div class="col-xs-4"><a href="#" style="background-image: url('images/category5.jpg');"><span>Fiskars</span></a></div>
-		<div class="col-xs-4"><a href="#" class="offer-of-the-week">
-			<div class="label label-right">ВЫБОР<br>НЕДЕЛИ</div>
-			<div class="image" style="background-image: url('images/fiskars.jpg');"></div>
-			<div class="description">
-				<div class="name">Fiskars Ручной скрепер  для  уборки снега</div>
-				<div class="price">1500.00 руб</div>
-				<div class="art">Артикул: 143000</div>
-			</div>
-		</a></div>
+<div class="frontpage-categories">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-4"><a href="#" style="background-image: url('images/category1.jpg');"><span>Продукты</span></a></div>
+			<div class="col-xs-12 col-sm-6 col-md-4"><a href="#" style="background-image: url('images/category2.jpg');"><span>Детство</span></a></div>
+			<div class="col-xs-12 col-sm-6 col-md-4"><a href="#" style="background-image: url('images/category1.jpg');"><span>Косметика</span></a></div>
+			<div class="col-xs-12 col-sm-6 col-md-4"><a href="#" style="background-image: url('images/category4.jpg');"><span>Сантехника</span></a></div>
+			<div class="col-xs-12 col-sm-6 col-md-4"><a href="#" style="background-image: url('images/category5.jpg');"><span>Fiskars</span></a></div>
+			<div class="col-xs-12 col-sm-6 col-md-4"><a href="#" class="offer-of-the-week">
+				<div class="label label-right">ВЫБОР<br>НЕДЕЛИ</div>
+				<div class="image" style="background-image: url('images/fiskars.jpg');"></div>
+				<div class="description">
+					<div class="name">Fiskars Ручной скрепер  для  уборки снега</div>
+					<div class="price">1500.00 руб</div>
+					<div class="art">Артикул: 143000</div>
+				</div>
+			</a></div>
+		</div>
 	</div>
 </div>
 <div class="container">
@@ -298,7 +306,7 @@
 		<div class="col-xs-12 heading"><span>Новинки</span></div>
 	</div>
 	<div class="row goods">
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-1.png');"><a class="zoom" href="images/tovar-1.png"></a></div>
 				<a href="product.html">
@@ -311,7 +319,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item sale">
 				<div class="label label-left thumb-up"></div>
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
@@ -325,7 +333,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item sale">
 				<div class="label label-right">ЛОВИ<br>МОМЕНТ</div>
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
@@ -339,7 +347,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
@@ -352,7 +360,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
@@ -365,7 +373,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
@@ -379,7 +387,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
@@ -392,7 +400,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
@@ -413,7 +421,7 @@
 		<div class="col-xs-12 heading"><span>Хиты</span></div>
 	</div>
 	<div class="row goods">
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
@@ -426,7 +434,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
@@ -440,7 +448,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
@@ -453,7 +461,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-6 col-md-3">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
@@ -475,9 +483,9 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-8 footer-cols-wrapper">
+			<div class="col-xs-12 col-md-8 footer-cols-wrapper">
 				<div class="row">
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -486,7 +494,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -495,7 +503,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн Посмотреть каталог онлайн</a></li>
@@ -506,7 +514,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-md-4">
 				<div class="footer-col">
 					<ul class="footer-socials">
 						<li><a href="#"></a></li>
