--- a/www/header+footer.html
+++ b/www/header+footer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Эксперт-М</title>
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -86,7 +86,7 @@
 			<div class="header-basket-col">
 				<div class="basket">
 					<span class="ico"><span class="badge">115</span></span>
-					<span class="total-price underlined"><span>0</span> руб</span>
+					<span class="total-price underlined"><span>20547,87</span> руб</span>
 				</div>
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
@@ -247,9 +247,9 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-8 footer-cols-wrapper">
+			<div class="col-xs-12 col-md-8 footer-cols-wrapper">
 				<div class="row">
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -258,7 +258,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -267,7 +267,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн Посмотреть каталог онлайн</a></li>
@@ -278,7 +278,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-md-4">
 				<div class="footer-col">
 					<ul class="footer-socials">
 						<li><a href="#"></a></li>
