--- a/www/blog.html
+++ b/www/blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Эксперт-М</title>
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -348,10 +348,13 @@
 	</div>
 	<div class="row pagination-row">
 		<ul class="pagination">
+			<li class="disabled"><a href="#">←</a></li>
 			<li class="active"><a href="#">1</a></li>
 			<li><a href="#">2</a></li>
 			<li><a href="#">3</a></li>
+			<li class="disabled"><span>...</span></li>
 			<li><a href="#">4</a></li>
+			<li><a href="#">→</a></li>
 		</ul>
 	</div>
 	<div class="row">
