--- a/www/catalog-1.html
+++ b/www/catalog-1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Эксперт-М</title>
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -190,8 +190,8 @@
 <!-- /header -->
 <div class="container content">
 	<div class="row">
-		<div class="col-xs-6"></div>
-		<div class="col-xs-6 free-shiping free-shiping-2">
+		<div class="col-xs-12 col-sm-12 col-md-6"></div>
+		<div class="col-xs-12 col-sm-12 col-md-6 free-shiping free-shiping-2">
 			<div class="car">
 				<div>
 					<div class="range"></div>
@@ -223,7 +223,8 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-3 bx-filter">
+		<div class="col-xs-12 bx-filter-trigger"><button>Фильтры</button></div>
+		<div class="col-xs-12 col-sm-12 col-md-3 bx-filter">
 			<form action="" method="GET" class="smartfilter">
 				<div class="bx-filter-parameters-box range-slider">
 					<div class="bx-filter-parameters-box-title"><span>Цена, руб.</span></div>
@@ -323,12 +324,12 @@
 				</div>
 			</form>
 		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-12 col-sm-12 col-md-9">
 			<div class="row">
 				<div class="col-xs-12 heading"><span>Название категории второго уровня</span></div>
 			</div>
 			<div class="row goods">
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-1.png');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -341,7 +342,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item sale">
 						<div class="label label-right">ЛОВИ<br>МОМЕНТ</div>
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
@@ -355,7 +356,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -368,7 +369,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item sale">
 						<div class="label label-left thumb-up"></div>
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
@@ -382,7 +383,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -395,7 +396,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -411,10 +412,13 @@
 			</div>
 			<div class="row pagination-row">
 				<ul class="pagination">
+					<li class="disabled"><a href="#">←</a></li>
 					<li class="active"><a href="#">1</a></li>
 					<li><a href="#">2</a></li>
 					<li><a href="#">3</a></li>
+					<li class="disabled"><span>...</span></li>
 					<li><a href="#">4</a></li>
+					<li><a href="#">→</a></li>
 				</ul>
 			</div>
 		</div>
@@ -423,7 +427,7 @@
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
 	</div>
 	<div class="row goods recent-view">
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -435,7 +439,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
 				<a href="product.html">
@@ -447,7 +451,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -459,7 +463,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -471,7 +475,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -483,7 +487,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -501,9 +505,9 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-8 footer-cols-wrapper">
+			<div class="col-xs-12 col-md-8 footer-cols-wrapper">
 				<div class="row">
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -512,7 +516,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -521,7 +525,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн Посмотреть каталог онлайн</a></li>
@@ -532,7 +536,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-md-4">
 				<div class="footer-col">
 					<ul class="footer-socials">
 						<li><a href="#"></a></li>
