--- a/www/catalog-2.html
+++ b/www/catalog-2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Эксперт-М</title>
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -244,8 +244,8 @@
 <!-- /header -->
 <div class="container content">
 	<div class="row">
-		<div class="col-xs-6"></div>
-		<div class="col-xs-6 free-shiping free-shiping-2">
+		<div class="col-xs-12 col-sm-12 col-md-6"></div>
+		<div class="col-xs-12 col-sm-12 col-md-6 free-shiping free-shiping-2">
 			<div class="car">
 				<div>
 					<div class="range"></div>
@@ -277,56 +277,56 @@
 		</div>
 	</div>
 	<div class="row additional-navigation">
-		<div class="col-xs-3">
+		<div class="col-xs-6 col-sm-4 col-md-3">
 			<a href="#">
 				<div class="category-ico" style="background-image:url('images/category1.jpg');">
 					<div class="category-label">Продукт продукт продукт продукт продукт</div>
 				</div>
 			</a>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-6 col-sm-4 col-md-3">
 			<a href="#">
 				<div class="category-ico" style="background-image:url('images/category1.jpg');">
 					<div class="category-label">Продукт продукт продукт продукт продукт</div>
 				</div>
 			</a>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-6 col-sm-4 col-md-3">
 			<a href="#">
 				<div class="category-ico" style="background-image:url('images/category1.jpg');">
 					<div class="category-label">Продукт продукт продукт продукт продукт</div>
 				</div>
 			</a>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-6 col-sm-4 col-md-3">
 			<a href="#">
 				<div class="category-ico" style="background-image:url('images/category1.jpg');">
 					<div class="category-label">Продукт продукт продукт продукт продукт</div>
 				</div>
 			</a>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-6 col-sm-4 col-md-3">
 			<a href="#">
 				<div class="category-ico" style="background-image:url('images/category1.jpg');">
 					<div class="category-label">Продукт продукт продукт продукт продукт</div>
 				</div>
 			</a>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-6 col-sm-4 col-md-3">
 			<a href="#">
 				<div class="category-ico" style="background-image:url('images/category1.jpg');">
 					<div class="category-label">Продукт продукт продукт продукт продукт</div>
 				</div>
 			</a>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-6 col-sm-4 col-md-3">
 			<a href="#">
 				<div class="category-ico" style="background-image:url('images/category1.jpg');">
 					<div class="category-label">Продукт продукт продукт продукт продукт</div>
 				</div>
 			</a>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-6 col-sm-4 col-md-3">
 			<a href="#">
 				<div class="category-ico" style="background-image:url('images/category1.jpg');">
 					<div class="category-label">Продукт продукт продукт продукт продукт</div>
@@ -335,7 +335,8 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-3 bx-filter">
+		<div class="col-xs-12 bx-filter-trigger"><button>Фильтры</button></div>
+		<div class="col-xs-12 col-sm-12 col-md-3 bx-filter">
 			<form action="" method="GET" class="smartfilter">
 				<div class="bx-filter-parameters-box range-slider">
 					<div class="bx-filter-parameters-box-title"><span>Цена, руб.</span></div>
@@ -435,12 +436,12 @@
 				</div>
 			</form>
 		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-12 col-sm-12 col-md-9">
 			<div class="row">
 				<div class="col-xs-12 heading"><span>Название категории второго уровня</span></div>
 			</div>
 			<div class="row goods">
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-1.png');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -453,7 +454,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item sale">
 						<div class="label label-right">ЛОВИ<br>МОМЕНТ</div>
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
@@ -467,7 +468,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -480,7 +481,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item sale">
 						<div class="label label-left thumb-up"></div>
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
@@ -494,7 +495,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -507,7 +508,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -523,10 +524,13 @@
 			</div>
 			<div class="row pagination-row">
 				<ul class="pagination">
+					<li class="disabled"><a href="#">←</a></li>
 					<li class="active"><a href="#">1</a></li>
 					<li><a href="#">2</a></li>
 					<li><a href="#">3</a></li>
+					<li class="disabled"><span>...</span></li>
 					<li><a href="#">4</a></li>
+					<li><a href="#">→</a></li>
 				</ul>
 			</div>
 		</div>
@@ -535,7 +539,7 @@
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
 	</div>
 	<div class="row goods recent-view">
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -547,7 +551,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
 				<a href="product.html">
@@ -559,7 +563,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -571,7 +575,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -583,7 +587,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -595,7 +599,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -613,9 +617,9 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-8 footer-cols-wrapper">
+			<div class="col-xs-12 col-md-8 footer-cols-wrapper">
 				<div class="row">
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -624,7 +628,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -633,7 +637,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн Посмотреть каталог онлайн</a></li>
@@ -644,7 +648,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-md-4">
 				<div class="footer-col">
 					<ul class="footer-socials">
 						<li><a href="#"></a></li>
