--- a/www/catalog-text.html
+++ b/www/catalog-text.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Эксперт-М</title>
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -244,8 +244,8 @@
 <!-- /header -->
 <div class="container content">
 	<div class="row">
-		<div class="col-xs-6"></div>
-		<div class="col-xs-6 free-shiping free-shiping-1">
+		<div class="col-xs-12 col-sm-12 col-md-6"></div>
+		<div class="col-xs-12 col-sm-12 col-md-6 free-shiping free-shiping-1">
 			<div class="text">До бесплатной доставки осталось <span>500 р.</span></div>
 			<div class="car">
 				<a href="#">Хочу бесплатно</a>
@@ -264,14 +264,14 @@
 		<div class="col-xs-12"><span class="catalog-title-1" style="padding-top: 0;">Заголовок первого уровня</span></div>
 	</div>
 	<div class="row catalog-text-category">
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-4 col-md-3">
 			<div class="category-ico" style="background-image:url('images/category1.jpg');">
 				<div class="category-label">Название 2 уровень</div>
 			</div>
 		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-12 col-sm-8 col-md-9">
 			<div class="row">
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -284,7 +284,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -297,7 +297,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -310,7 +310,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -327,14 +327,14 @@
 		</div>
 	</div>
 	<div class="row catalog-text-category">
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-4 col-md-3">
 			<div class="category-ico" style="background-image:url('images/category2.jpg');">
 				<div class="category-label">Название 2 уровень</div>
 			</div>
 		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-12 col-sm-8 col-md-9">
 			<div class="row">
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -347,7 +347,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -360,7 +360,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -373,7 +373,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -393,14 +393,14 @@
 		<div class="col-xs-12"><span class="catalog-title-1">Заголовок первого уровня</span></div>
 	</div>
 	<div class="row catalog-text-category">
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-4 col-md-3">
 			<div class="category-ico" style="background-image:url('images/category4.jpg');">
 				<div class="category-label">Название 2 уровень</div>
 			</div>
 		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-12 col-sm-8 col-md-9">
 			<div class="row">
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -413,7 +413,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -426,7 +426,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -439,7 +439,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -456,14 +456,14 @@
 		</div>
 	</div>
 	<div class="row catalog-text-category">
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-4 col-md-3">
 			<div class="category-ico" style="background-image:url('images/category5.jpg');">
 				<div class="category-label">Название 2 уровень</div>
 			</div>
 		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-12 col-sm-8 col-md-9">
 			<div class="row">
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -476,7 +476,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -489,7 +489,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -502,7 +502,7 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
-				<ul class="col-xs-3">
+				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -523,9 +523,9 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-8 footer-cols-wrapper">
+			<div class="col-xs-12 col-md-8 footer-cols-wrapper">
 				<div class="row">
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -534,7 +534,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -543,7 +543,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн Посмотреть каталог онлайн</a></li>
@@ -554,7 +554,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-md-4">
 				<div class="footer-col">
 					<ul class="footer-socials">
 						<li><a href="#"></a></li>
