--- a/www/promo-actions.html
+++ b/www/promo-actions.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Эксперт-М</title>
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
