--- a/www/header+footer.html
+++ b/www/header+footer.html
@@ -309,6 +309,7 @@
 <script src="adds/jScrollPane/jquery.mousewheel.js"></script>
 <script src="adds/jScrollPane/jquery.jscrollpane.min.js"></script>
 <script src="adds/fancybox2/jquery.fancybox.pack.js"></script>
+<script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
