--- a/www/cart-2.html
+++ b/www/cart-2.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="adds/fancybox2/jquery.fancybox.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/media.css" />
+	<!--YANDEX MAPS-->
+	<script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
 	<!--[if lt IE 9]>
 	   <script>
 		  document.createElement('header');
@@ -524,14 +526,14 @@
 			</div>
 		</div>
 		<div class="col-xs-12 vertical-line"></div>
-		<div class="col-xs-9"><input type="button" class="back" value="Вернуться"></div>
-		<div class="col-xs-3"><input type="submit" value="Оформить заказ"></div>
+		<div class="col-xs-6 col-sm-6 col-md-9"><input type="button" class="back" value="Вернуться"></div>
+		<div class="col-xs-6 col-sm-6 col-md-9"><input type="submit" value="Оформить заказ"></div>
 	</form>
 	<div class="row">
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
 	</div>
 	<div class="row goods recent-view">
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -543,7 +545,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
 				<a href="product.html">
@@ -555,7 +557,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -567,7 +569,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -579,7 +581,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -591,7 +593,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -606,10 +608,13 @@
 	</div>
 	<div class="row pagination-row">
 		<ul class="pagination">
+			<li class="disabled"><a href="#">←</a></li>
 			<li class="active"><a href="#">1</a></li>
 			<li><a href="#">2</a></li>
 			<li><a href="#">3</a></li>
+			<li class="disabled"><span>...</span></li>
 			<li><a href="#">4</a></li>
+			<li><a href="#">→</a></li>
 		</ul>
 	</div>
 </div>
@@ -617,9 +622,9 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-8 footer-cols-wrapper">
+			<div class="col-xs-12 col-md-8 footer-cols-wrapper">
 				<div class="row">
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -628,7 +633,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -637,7 +642,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн Посмотреть каталог онлайн</a></li>
@@ -648,7 +653,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-md-4">
 				<div class="footer-col">
 					<ul class="footer-socials">
 						<li><a href="#"></a></li>
@@ -675,10 +680,10 @@
 			<div class="modal-body">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-xs-5">
+						<div class="col-xs-12 col-sm-12 col-md-5">
 							<div id="map"></div>
 						</div>
-						<div class="col-xs-7 checkboxes">
+						<div class="col-xs-12 col-sm-12 col-md-7 checkboxes">
 							<div class="scroll-pane">
 								<div class="outpost-checkbox-item">
 									<input type="radio" name="outpost-radio" id="outpost-1" value="Пункты самовывоза и обслуживания vip клиентов" checked>
@@ -724,11 +729,11 @@
 			<div class="modal-footer">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-xs-8"></div>
-						<div class="col-xs-2">
+						<div class="col-xs-12 col-sm-12col-md-8"></div>
+						<div class="col-xs-6 col-sm-6 col-md-2">
 							<button class="show-on-the-map">На карте</button>
 						</div>
-						<div class="col-xs-2">
+						<div class="col-xs-6 col-sm-6 col-md-2">
 							<button class="select-the-outpost" data-dismiss="modal">Выбрать</button>
 						</div>
 					</div>
@@ -748,6 +753,7 @@
 <script src="adds/jScrollPane/jquery.mousewheel.js"></script>
 <script src="adds/jScrollPane/jquery.jscrollpane.min.js"></script>
 <script src="adds/fancybox2/jquery.fancybox.pack.js"></script>
+<script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
