--- a/www/promo-action.html
+++ b/www/promo-action.html
@@ -244,8 +244,8 @@
 <!-- /header -->
 <div class="container content action">
 	<div class="row">
-		<div class="col-xs-6"></div>
-		<div class="col-xs-6 free-shiping free-shiping-2">
+		<div class="col-xs-12 col-sm-12 col-md-6"></div>
+		<div class="col-xs-12 col-sm-12 col-md-6 free-shiping free-shiping-2">
 			<div class="car">
 				<div>
 					<div class="range"></div>
@@ -274,7 +274,8 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-3 bx-filter">
+		<div class="col-xs-12 bx-filter-trigger"><button>Фильтры</button></div>
+		<div class="col-xs-12 col-sm-12 col-md-3 bx-filter">
 			<form action="" method="GET" class="smartfilter">
 				<div class="bx-filter-parameters-box range-slider">
 					<div class="bx-filter-parameters-box-title"><span>Цена, руб.</span></div>
@@ -374,12 +375,12 @@
 				</div>
 			</form>
 		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-12 col-sm-12 col-md-9">
 			<div class="row">
 				<div class="col-xs-12 heading"><span>Товары акции</span></div>
 			</div>
 			<div class="row goods">
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-1.png');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -392,7 +393,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item sale">
 						<div class="label label-right">ЛОВИ<br>МОМЕНТ</div>
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
@@ -406,7 +407,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -419,7 +420,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item sale">
 						<div class="label label-left thumb-up"></div>
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
@@ -433,7 +434,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -446,7 +447,7 @@
 						<a href="javascript:void(0);" class="to-the-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="item">
 						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 						<a href="product.html">
@@ -462,10 +463,13 @@
 			</div>
 			<div class="row pagination-row">
 				<ul class="pagination">
+					<li class="disabled"><a href="#">←</a></li>
 					<li class="active"><a href="#">1</a></li>
 					<li><a href="#">2</a></li>
 					<li><a href="#">3</a></li>
+					<li class="disabled"><span>...</span></li>
 					<li><a href="#">4</a></li>
+					<li><a href="#">→</a></li>
 				</ul>
 			</div>
 		</div>
@@ -474,7 +478,7 @@
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
 	</div>
 	<div class="row goods recent-view">
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -486,7 +490,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
 				<a href="product.html">
@@ -498,7 +502,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -510,7 +514,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -522,7 +526,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -534,7 +538,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -552,9 +556,9 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-8 footer-cols-wrapper">
+			<div class="col-xs-12 col-md-8 footer-cols-wrapper">
 				<div class="row">
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -563,7 +567,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -572,7 +576,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн Посмотреть каталог онлайн</a></li>
@@ -583,7 +587,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-md-4">
 				<div class="footer-col">
 					<ul class="footer-socials">
 						<li><a href="#"></a></li>
@@ -614,6 +618,7 @@
 <script src="adds/jScrollPane/jquery.mousewheel.js"></script>
 <script src="adds/jScrollPane/jquery.jscrollpane.min.js"></script>
 <script src="adds/fancybox2/jquery.fancybox.pack.js"></script>
+<script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
