--- a/www/cart-2.html
+++ b/www/cart-2.html
@@ -246,8 +246,8 @@
 <!-- /header -->
 <div class="container content cart">
 	<div class="row">
-		<div class="col-xs-6"></div>
-		<div class="col-xs-6 free-shiping free-shiping-2">
+		<div class="col-xs-12 col-sm-12 col-md-6"></div>
+		<div class="col-xs-12 col-sm-12 col-md-6 free-shiping free-shiping-2">
 			<div class="car">
 				<div>
 					<div class="range"></div>
@@ -527,7 +527,7 @@
 		</div>
 		<div class="col-xs-12 vertical-line"></div>
 		<div class="col-xs-6 col-sm-6 col-md-9"><input type="button" class="back" value="Вернуться"></div>
-		<div class="col-xs-6 col-sm-6 col-md-9"><input type="submit" value="Оформить заказ"></div>
+		<div class="col-xs-6 col-sm-6 col-md-3"><input type="submit" value="Оформить заказ"></div>
 	</form>
 	<div class="row">
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
