--- a/www/promo-actions.html
+++ b/www/promo-actions.html
@@ -264,20 +264,15 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-xs-3">
-			<div class="promo-banner small-height"><a href="promo-action.html"></a></div>
-			<div class="promo-banner big-height"><a href="promo-action.html"></a></div>
-		</div>
-		<div class="col-xs-6">
-			<div class="promo-banner medium-height"><a href="promo-action.html"></a></div>
-			<div class="promo-banner medium-height"><a href="promo-action.html"></a></div>
-			<div class="promo-banner medium-height"><a href="promo-action.html"></a></div>
-		</div>
-		<div class="col-xs-3">
-			<div class="promo-banner big-height"><a href="promo-action.html"></a></div>
-			<div class="promo-banner small-height"><a href="promo-action.html"></a></div>
-		</div>
+	<div class="row packery-grid" data-packery='{ "itemSelector": ".packery-grid-item", "gutter": 20 }'>
+		<div class="packery-grid-item"><img src="images/packery-1.jpg" alt="Packery 1"></div>
+		<div class="packery-grid-item"><img src="images/packery-2.jpg" alt="Packery 2"></div>
+		<div class="packery-grid-item"><img src="images/packery-3.jpg" alt="Packery 3"></div>
+		<div class="packery-grid-item"><img src="images/packery-2.jpg" alt="Packery 4"></div>
+		<div class="packery-grid-item"><img src="images/packery-3.jpg" alt="Packery 5"></div>
+		<div class="packery-grid-item"><img src="images/packery-1.jpg" alt="Packery 6"></div>
+		<div class="packery-grid-item"><img src="images/packery-1.jpg" alt="Packery 7"></div>
+		<div class="packery-grid-item"><img src="images/packery-3.jpg" alt="Packery 8"></div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
@@ -429,6 +424,7 @@
 <script src="adds/jScrollPane/jquery.jscrollpane.min.js"></script>
 <script src="adds/fancybox2/jquery.fancybox.pack.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
+<script src="js/packery.pkgd.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
