--- a/www/cart-1.html
+++ b/www/cart-1.html
@@ -91,8 +91,7 @@
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
-						<div class="item">Ваша корзина еще пуста.</div>
-						<div class="item" data-item-summ="7196.74"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
+						<div class="item" data-item-summ="7196.74" data-articul="001"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -105,53 +104,27 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-summ="7196.74" data-articul="002">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
 							<div class="price">
 								<div>
-									<div class="special-price">3593.37 <span>руб</span></div><!-- Special price -->
-									<div class="old-price">3593.37 <span>руб</span></div><!-- Old price -->
+									<div class="special-price">3593.37<span> руб</span></div><!-- Special price -->
+									<div class="old-price">3593.37<span> руб</span></div><!-- Old price -->
 								</div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-summ="7196.74" data-articul="003">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
 							<div class="price">
 								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
-							</div>
-							<div class="remove">
-								<a href="#"></a>
-							</div>
-						</div>
-						<div class="item" data-item-summ="7196.74">
-							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
-							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
-							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
-							</div>
-							<div class="remove">
-								<a href="#"></a>
-							</div>
-						</div>
-						<div class="item" data-item-summ="7196.74">
-							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
-							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
-							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
+									<div>3593.37<span> руб</span></div><!-- Normal price -->
 								</div>
 							</div>
 							<div class="remove">
