--- a/www/cart-1.html
+++ b/www/cart-1.html
@@ -85,8 +85,8 @@
 			</div>
 			<div class="header-basket-col">
 				<div class="basket">
-					<span class="ico"><span class="badge">115</span></span>
-					<span class="total-price underlined"><span>20547,87</span> руб</span>
+					<span class="ico"><span class="badge"></span></span>
+					<span class="total-price underlined"><span>0</span> руб</span>
 				</div>
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
@@ -222,7 +222,7 @@
 			<div class="car">
 				<div>
 					<div class="range"></div>
-					<div class="ico" style="width:60%;"></div>
+					<div class="ico" style="width:0%;"></div>
 				</div>
 				<a href="#">Хочу бесплатно</a>
 			</div>
@@ -262,7 +262,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr>
+					<tr data-item-artikul="001" data-item-price="3500" data-item-discount-price="3400" data-item-vol="1">
 						<td>1</td>
 						<td><a href="#"><img src="images/product-image.jpg" alt="Изображение товара"></a></td>
 						<td><a href="#">Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</a></td>
@@ -279,10 +279,10 @@
 								<input id="cart-item-1" type="number" min="1" max="999" step="1" value="1" />
 							</div>
 						</td>
-						<td>3593.37</td>
+						<td>3500</td>
 						<td>
-							<div class="special-price">3597.37</div>
-							<div class="old-price">3597.37 <span>руб</span></div>
+							<div class="special-price">3400</div>
+							<div class="old-price"><span>3500</span> руб</div>
 						</td>
 						<td>
 							<a href="#" class="trash">
@@ -305,7 +305,7 @@
 							</a>
 						</td>
 					</tr>
-					<tr>
+					<tr data-item-artikul="002" data-item-price="4500" data-item-discount-price="4400" data-item-vol="1">
 						<td>2</td>
 						<td><a href="#"><img src="images/product-image.jpg" alt="Изображение товара"></a></td>
 						<td><a href="#">Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</a></td>
@@ -322,10 +322,10 @@
 								<input id="cart-item-2" type="number" min="1" max="999" step="1" value="1" />
 							</div>
 						</td>
-						<td>3593.37</td>
+						<td>4500</td>
 						<td>
-							<div class="special-price">3597.37</div>
-							<div class="old-price">3597.37 <span>руб</span></div>
+							<div class="special-price">4400</div>
+							<div class="old-price"><span>4500</span> руб</div>
 						</td>
 						<td>
 							<a href="#" class="trash">
@@ -348,7 +348,7 @@
 							</a>
 						</td>
 					</tr>
-					<tr>
+					<tr data-item-artikul="001" data-item-price="5500" data-item-discount-price="5400" data-item-vol="1">
 						<td>3</td>
 						<td><a href="#"><img src="images/product-image.jpg" alt="Изображение товара"></a></td>
 						<td><a href="#">Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</a></td>
@@ -365,10 +365,10 @@
 								<input id="cart-item-3" type="number" min="1" max="999" step="1" value="1" />
 							</div>
 						</td>
-						<td>3593.37</td>
+						<td>5500</td>
 						<td>
-							<div class="special-price">3597.37</div>
-							<div class="old-price">3597.37 <span>руб</span></div>
+							<div class="special-price">5400</div>
+							<div class="old-price"><span>5500</span> руб</div>
 						</td>
 						<td>
 							<a href="#" class="trash">
@@ -404,8 +404,8 @@
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3"></div>
 		<div class="col-xs-12 col-sm-12 col-md-3">
-			<div class="summ">Общая сумма заказа  15600 р.</div>
-			<div class="summ2">Сумма со скидкой <span>14200 р.</span></div>
+			<div class="summ">Общая сумма заказа  <span>0</span> р.</div>
+			<div class="summ2">Сумма со скидкой <span><span>0</span> р.</span></div>
 			<input type="submit" value="Оформить заказ">
 		</div>
 	</form>
