--- a/www/catalog-text.html
+++ b/www/catalog-text.html
@@ -85,8 +85,8 @@
 			</div>
 			<div class="header-basket-col">
 				<div class="basket">
-					<span class="ico"><span class="badge">115</span></span>
-					<span class="total-price underlined"><span>20547,87</span> руб</span>
+					<span class="ico"><span class="badge"></span></span>
+					<span class="total-price underlined"><span>0</span> руб</span>
 				</div>
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
