--- a/www/product.html
+++ b/www/product.html
@@ -85,7 +85,7 @@
 			</div>
 			<div class="header-basket-col">
 				<div class="basket">
-					<span class="ico"><span class="badge">1</span></span>
+					<span class="ico"><span class="badge"></span></span>
 					<span class="total-price underlined"><span>0</span> руб</span>
 				</div>
 				<div class="basket-details">
